# async-imap

./: Cargo.toml
examples/: basic.rs  gmail_oauth2.rs  idle.rs
src/: client.rs  error.rs
tests/: imap_integration.rs
